# papi

./: .gitignore  .gitmodules  ChangeLog.txt  Makefile.am  autogen.sh  configure  configure.ac
confdb/: aclocal_util.m4
doc/: Doxyfile-common.in  Doxyfile-html.in  Doxyfile-man1.in  Doxyfile-man3.in  Makefile  Makefile.mk
maint/: gen_comp_makefile.sh  version.m4
man/man1/: papi_hybrid_native_avail.1
src/: Makefile.in  Makefile.inc  Makefile.mk  Rules.bgpm  Rules.perfctr  Rules.perfctr-pfm  Rules.perfmon2  Rules.perfnec  Rules.pfm  Rules.pfm4_pe  components_config.h.in  config.h.in  configure  configure.ac  configure.in  cpus.c  dummy_cpu_component.c  f77papi.h  f90papi.h  fpapi.h  freebsd-config.h.in  papi.c  papi.h  papi_fwrappers.c  papi_internal.c  papi_internal.h  papi_libpfm4_events.h  papi_lock.h  threads.c
src/aix/: Makefile.mk
src/bgp/: Makefile.mk
src/bgq/: Makefile.mk
src/components/: Makefile_comp_tests.target.in
src/components/appio/: Makefile.mk  Rules.appio
src/components/bgpm/: Makefile.mk
src/components/coretemp/: Makefile.mk  Rules.coretemp
src/components/coretemp_freebsd/: Makefile.mk  Rules.coretemp_freebsd
src/components/cpu/: common.h  cpu.c  cpu_pcp.c  cpu_pcp.h  cpu_pe.c  cpu_pe.h  cpu_prof.c  cpu_prof.h  cpu_stubs.c  cpu_stubs.h
src/components/cuda/: Makefile.mk  Rules.cuda  linux-cuda.c
src/components/emon/: Makefile.mk  Rules.emon
src/components/example/: Makefile.mk  Rules.example
src/components/host_micpower/: Makefile.mk  Rules.host_micpower
src/components/infiniband/: Makefile.mk  Rules.infiniband  linux-infiniband.c  pscanf.h
src/components/intel_gpu/: Makefile.mk  Rules.intel_gpu  linux_intel_gpu_metrics.c
src/components/io/: Makefile.mk  Rules.io
src/components/mx/: Rules.mx  (+1 more)
src/counter_analysis_toolkit/: Makefile
src/ctests/: Makefile.mk  Makefile.recipies  mpifirst.c  pernode.c  val_omp.c
src/darwin/: Makefile.mk
src/examples/: Makefile  Makefile.AIX  Makefile.IRIX64  Makefile.OSF1
src/freebsd/: Makefile.mk  freebsd-config.h.in
src/ftests/: Makefile.mk  Makefile.recipies
src/high-level/: Makefile.mk
src/linux/: Makefile.mk
src/solaris/: Makefile.mk
src/testlib/: Makefile  Makefile.mk  pet.c  pet.h
src/utils/: Makefile  Makefile.mk  Makefile.target.in  papi_clockres.c  papi_component_avail.c  papi_hardware_avail.c  papi_native_avail.c
src/validation_tests/: Makefile.mk  Makefile.recipies  Makefile.target.in
src/x86/: Makefile.mk
(+138 files in other folders)
